"Agregando el header con estilos"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="c-header">
+        <div class="c-space"></div>
+        <nav class="c-nav">
+          <div class="c-nav__logo">
+            <a> STAR DUST</a>
+          </div>
+          <div class="c-menu">
+            <ul>
+              <li class="c-menu__link isLight">
+                <a href="#">WORK</a>
+              </li>
+              <li class="c-menu__link">
+                <a href="#">ABOUT</a>
+              </li>
+              <li class="c-menu__link">
+                <a href="#">BLOG</a>
+              </li>
+              <li class="c-menu__link isButton">
+                <a href="#">HIRE US</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="c-info">
+          <div class="c-titulo">
+            <div class="c-titulo__text_is--small isLight">
+              <p>FOLLOW THE STAR</p>
+            </div>
+            <div class="c-titulo__text_is--big">
+              <p>
+                "Que a partir de ahora todo lo que hagas sea con el objetivo de
+                cumplir tu sueño"
+              </p>
+            </div>
+            <div class="c-titulo__link">
+              <a href="#" class="isButton">VIEW OUR WORK</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <article></article>
+    <footer></footer>
+  </body>
 </html>
