Añadiendo article con estilos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ul>
           </div>
         </nav>
-        <div class="c-info">
+        <div class="c-infoHeader">
           <div class="c-titulo">
             <div class="c-titulo__text_is--small isLight">
               <p>FOLLOW THE STAR</p>
@@ -50,7 +50,84 @@
         </div>
       </div>
     </header>
-    <article></article>
+    <article>
+      <div class="c-article">
+        <div class="c-contentSpace">
+          <div class="c-content">
+            <div class="c-content__infoText">
+              <div class="c-content__infoText_is--big isLight">
+                <p>
+                  The Hayden Collective employs the world's best designers and
+                  architects to elevate your space to the next level
+                </p>
+              </div>
+              <div class="c-content__infoText_is--small isLight">
+                <p>
+                  Photography courtesy of Alice Gao. content for demo purpose
+                  only
+                </p>
+              </div>
+            </div>
+            <div class="c-content__products">
+              <div class="c-card">
+                <div
+                  class="c-card__image"
+                  style="background-image: url(GuineaShooter.png)"
+                ></div>
+                <div class="c-card__infoText">
+                  <div class="c-card__infoText_is--big">
+                    <h2>Guinea shooter</h2>
+                  </div>
+                  <div class="c-card__infoText_is--small isLight">
+                    <p>
+                      Accompany our furry friends "not food" in an exciting
+                      space adventure, full of bubbles and the maximum
+                      tenderness that pixel art can express
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="c-card">
+                <div
+                  class="c-card__image"
+                  style="background-image: url(guineaPig-Space.jpg)"
+                ></div>
+                <div class="c-card__infoText">
+                  <div class="c-card__infoText_is--big">
+                    <h2>Guinea shooter</h2>
+                  </div>
+                  <div class="c-card__infoText_is--small isLight">
+                    <p>
+                      Accompany our furry friends "not food" in an exciting
+                      space adventure, full of bubbles and the maximum
+                      tenderness that pixel art can express
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="c-card">
+                <div
+                  class="c-card__image"
+                  style="background-image: url(GuineaShooter.png)"
+                ></div>
+                <div class="c-card__infoText">
+                  <div class="c-card__infoText_is--big">
+                    <h2>Guinea shooter</h2>
+                  </div>
+                  <div class="c-card__infoText_is--small isLight">
+                    <p>
+                      Accompany our furry friends "not food" in an exciting
+                      space adventure, full of bubbles and the maximum
+                      tenderness that pixel art can express
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
     <footer></footer>
   </body>
 </html>
