--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -14,6 +15,9 @@
         <nav class="c-nav">
           <div class="c-nav__logo">
             <a> STAR DUST</a>
+          </div>
+          <div class="c-nav__menu">
+            <a> MENU</a>
           </div>
           <div class="c-menu">
             <ul>
@@ -128,6 +132,59 @@
         </div>
       </div>
     </article>
-    <footer></footer>
+    <footer>
+      <div class="c-footer">
+        <div class="c-footer__contentSpace">
+          <div class="c-contentFoot">
+            <div class="c-contentFoot__info">
+              <div class="c-contentInfo">
+                <div class="c-contentInfo-data">
+                  <p><b>Star Dust</b></p>
+                  <ul>
+                    <li>Direction</li>
+                    <li>Number</li>
+                    <li>Email</li>
+                  </ul>
+                </div>
+                <div class="c-contentInfo-copy">
+                  <p>Copyright Tanah Air Studio</p>
+                </div>
+              </div>
+            </div>
+            <div class="c-contentFoot__info">
+              <div class="c-contentInfo">
+                <ul>
+                  <li><b>Service</b></li>
+                  <li>Illustration</li>
+                  <li>Music</li>
+                  <li>Game development</li>
+                  <li>Mobile Design</li>
+                  <li>SEO</li>
+                </ul>
+              </div>
+            </div>
+            <div class="c-contentFoot__info">
+              <div class="c-contentInfo">
+                <ul>
+                  <li><b>Company</b></li>
+                  <li>Features</li>
+                  <li>Our Team</li>
+                  <li>Portfolio</li>
+                  <li>Blog</li>
+                  <li>Contact US</li>
+                </ul>
+              </div>
+            </div>
+            <div class="c-contentFoot__info">
+              <div class="c-contentInfo">
+                <p><b>Our Social Media</b></p>
+                <div class="c-contentSocialMedia__logos"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="app.js"></script>
   </body>
 </html>
