Agregando footer con estilos y responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
+    <link rel="stylesheet" href="fonts.css" />
     <title>Document</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
             <a> STAR DUST</a>
           </div>
           <div class="c-nav__menu">
-            <a> MENU</a>
+            <a><span class="icon-menu"></span></a>
           </div>
           <div class="c-menu">
             <ul>
@@ -137,13 +137,22 @@
         <div class="c-footer__contentSpace">
           <div class="c-contentFoot">
             <div class="c-contentFoot__info">
-              <div class="c-contentInfo">
+              <div class="c-contentInfo c-footData">
                 <div class="c-contentInfo-data">
                   <p><b>Star Dust</b></p>
                   <ul>
-                    <li>Direction</li>
-                    <li>Number</li>
-                    <li>Email</li>
+                    <li>
+                      <div class="c-circle_data"></div>
+                      <p>Cr 5 # 37-84 Bogota D.C</p>
+                    </li>
+                    <li>
+                      <div class="c-circle_data"></div>
+                      <p>+57 319-256-2546</p>
+                    </li>
+                    <li>
+                      <div class="c-circle_data"></div>
+                      <p>Stardust@gmail.com</p>
+                    </li>
                   </ul>
                 </div>
                 <div class="c-contentInfo-copy">
@@ -151,6 +160,7 @@
                 </div>
               </div>
             </div>
+            <hr />
             <div class="c-contentFoot__info">
               <div class="c-contentInfo">
                 <ul>
@@ -163,6 +173,8 @@
                 </ul>
               </div>
             </div>
+            <div class="hr700"><hr /></div>
+            <hr />
             <div class="c-contentFoot__info">
               <div class="c-contentInfo">
                 <ul>
@@ -175,10 +187,27 @@
                 </ul>
               </div>
             </div>
+            <hr />
             <div class="c-contentFoot__info">
               <div class="c-contentInfo">
                 <p><b>Our Social Media</b></p>
-                <div class="c-contentSocialMedia__logos"></div>
+                <div class="c-contentSocialMedia__logos">
+                  <div class="c-circle_media">
+                    <a href="#"><span class="icon-facebook2"></span></a>
+                  </div>
+                  <div class="c-circle_media">
+                    <a href="#"><span class="icon-instagram"></span></a>
+                  </div>
+                  <div class="c-circle_media">
+                    <a href="#"><span class="icon-whatsapp"></span></a>
+                  </div>
+                  <div class="c-circle_media">
+                    <a href="#"><span class="icon-twitter"></span></a>
+                  </div>
+                  <div class="c-circle_media">
+                    <a href="#"><span class="icon-steam"></span></a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
