Agregando algunas funcionalidades a la pagina web

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                 <a href="#">BLOG</a>
               </li>
               <li class="c-menu__link isButton">
-                <a href="#">HIRE US</a>
+                <a
+                  href="https://www.linkedin.com/in/cristian-gutierrez-5aba6a240/"
+                  >HIRE US</a
+                >
               </li>
             </ul>
           </div>
@@ -48,7 +51,9 @@
               </p>
             </div>
             <div class="c-titulo__link">
-              <a href="#" class="isButton">VIEW OUR WORK</a>
+              <a href="https://github.com/CristianCGutierrezG" class="isButton"
+                >VIEW OUR WORK</a
+              >
             </div>
           </div>
         </div>
@@ -193,10 +198,15 @@
                 <p><b>Our Social Media</b></p>
                 <div class="c-contentSocialMedia__logos">
                   <div class="c-circle_media">
-                    <a href="#"><span class="icon-facebook2"></span></a>
+                    <a
+                      href="https://www.facebook.com/cristiancamilo.gutierrezgomez.5"
+                      ><span class="icon-facebook2"></span
+                    ></a>
                   </div>
                   <div class="c-circle_media">
-                    <a href="#"><span class="icon-instagram"></span></a>
+                    <a href="https://www.instagram.com/guttcris/"
+                      ><span class="icon-instagram"></span
+                    ></a>
                   </div>
                   <div class="c-circle_media">
                     <a href="#"><span class="icon-whatsapp"></span></a>
@@ -205,7 +215,10 @@
                     <a href="#"><span class="icon-twitter"></span></a>
                   </div>
                   <div class="c-circle_media">
-                    <a href="#"><span class="icon-steam"></span></a>
+                    <a
+                      href="https://steamcommunity.com/profiles/76561198829582468/"
+                      ><span class="icon-steam"></span
+                    ></a>
                   </div>
                 </div>
               </div>
